[package]
name = "rusty_chess"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
egui_extras = { version = "0.26", features = ["all_loaders"] }
image = { version = "0.24", features = ["png"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
chrono = "0.4.34"
env_logger = "0.11.2"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# [[bin]]
# name = "client"
# path = "src/main.rs"
